--- a/tests/for_loop_test.lang
+++ b/tests/for_loop_test.lang
@@ -1,7 +1,8 @@
 for(int i in 1::3){
-    for(int j in 1::3){
-        for(int k in 1::3){
+    for(int j in 1::3::1){
+        for(int k in 1::3::-1){
             print i + " " + j + " " + k;
         }
     }
 }
+
