--- a/tests/func_test.lang
+++ b/tests/func_test.lang
@@ -1,3 +1,17 @@
-int f(int a, int b) -> a + b;
+int sum = (int a, int b) -> a + b;
 
-int c = f(2,3);
+int fib = (int n) -> {
+    if n == 0 or n == 1{
+        ret n;
+    }
+    else {
+        ret sum(fib(n-1), fib(n-2));
+    }
+}
+
+for(int i in 1::sum(6,0)*2){
+    print "fib(" + i + ") is " + fib(i);
+}
+print "Done!";
+
+// no type checking :c
