--- a/tests/for_loop_test.lang
+++ b/tests/for_loop_test.lang
@@ -1,8 +1,16 @@
-for(int i in 1::3){
-    for(int j in 1::3::1){
-        for(int k in 1::3::-1){
+for(int i in 0::1){
+    for(int j in 0::1::1){
+        for(int k in 0::1){
             print i + " " + j + " " + k;
         }
     }
 }
 
+/// 0 0 0
+/// 0 0 1
+/// 0 1 0
+/// 0 1 1
+/// 1 0 0
+/// 1 0 1
+/// 1 1 0
+/// 1 1 1
