--- a/tests/while_test.lang
+++ b/tests/while_test.lang
@@ -1,35 +1,23 @@
-print "Test <";
-int a = 2;
-while a < 7{
+int a = 3;
+while a > 0{
     print a;
-    a = a + 2;
+    a = a - 1;
 }
+/// 3
+/// 2
+/// 1
+/// 0
 
-print "Test ==";
-int b = 3;
-while b == 3{
-    b = 5;
+bool loop = true;
+int counter = 1;
+while loop {
+    print "in a loop " + counter;
+    counter = counter + 1;
+    if counter == 5 {
+        loop = false;
+    }
 }
-print "left the loop";
-print b;
-
-print "Test <=";
-int c = 4;
-while c <= 8{
-    c = c + 2;
-    print c;
-}
-
-print "Test >=";
-int d = 9;
-while d >= 2{
-    d = d / 2;
-    print d;
-}
-
-print "Test >";
-int e = 10;
-while e > 5{
-    e = e - 1;
-    print e;
-}
+/// in a loop 1
+/// in a loop 2
+/// in a loop 3
+/// in a loop 4
