Remove type checking. Add constant variables. Lang is now a fully interpreted language.

--- a/tests/bool_test.lang
+++ b/tests/bool_test.lang
@@ -1,4 +1,4 @@
-bool b = true;
+let b = true;
 print b;                    /// true
 print true and false;       /// false
 print true and true;        /// true
