--- a/tests/for_loop_test.lang
+++ b/tests/for_loop_test.lang
@@ -1,6 +1,6 @@
-for(int i in 0::1){
-    for(int j in 0::1::1){
-        for(int k in 0::1){
+for i in 0::1{
+    for j in 0::1::1{
+        for k in 0::1{
             print i + " " + j + " " + k;
         }
     }
