Commit old changes. Remove unused clone method.

--- a/tests/const_test.lang
+++ b/tests/const_test.lang
@@ -4,5 +4,5 @@ a = 5;
 const abc = 12;
 print abc; /// 12
 
-abc = abc + 1;
+abc = abc + 1;  // error message below
 print abc; /// Tried to change the value of a constant variable abc
